--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ constantly==23.10.4
 cookiecutter==2.6.0
 cryptography==43.0.1
 daphne==4.1.2
+dj-database-url==2.2.0
 Django==5.1.1
 django-admin-honeypot-updated-2021==1.2.0
 django-allauth==64.2.1
@@ -36,6 +37,7 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 msgpack==1.1.0
 pillow==10.4.0
+psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
